--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
+    "express": "^4.18.2",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
-    "jsonwebtoken": "^8.5.1",
+    "jade": "^1.9.2",
+    "jsonwebtoken": "^9.0.0",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.3",
     "node-mailer": "^0.1.1",
     "nodejs-nodemailer-outlook": "^1.2.4",
     "nodemailer": "^6.8.0",
     "sequelize": "^6.21.6",
+    "socket.io": "^4.6.1",
     "typeorm": "^0.3.10"
   },
   "main": "app.js",
