--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "nodemailer": "^6.8.0",
     "sequelize": "^6.21.6",
     "socket.io": "^4.6.1",
-    "typeorm": "^0.3.10"
+    "typeorm": "^0.3.10",
+    "web-push": "^3.6.1"
   },
   "main": "app.js",
   "repository": {
