--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "exceljs": "^4.3.0",
     "express": "^4.18.2",
     "http-errors": "~1.6.3",
     "jade": "^1.9.2",
